lld/test/error-atom-type.objtxt
# RUN: not lld-core %s 2> %t.err
# RUN:   FileCheck < %t.err %s

#
# Test that an unknown content type produces a readable error.
#

---
atoms:
    - name:         entry
      scope:        hidden
      type:         superluminal
      dead-strip:   never
  
...


# CHECK:       error: Invalid value for 'type:'
# CHECK:       superluminal
